Payment Checkout Effect

--- a/index.html
+++ b/index.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
+
+    <link rel="stylesheet" href="style.css">
+
 </head>
+
 <body>
-    <a href="product/index09.html"></a>
+    <section id="view">
+        <h3>Click image to view full site</h3>
+        <div id="pic">
+        <div class="product">
+            <a href="product/index09.html"> <img src="product.png" alt="Product"> </a>
+        </div>
+        <div class="payment">
+            <a href="payment/index02.html"> <img src="payment.png" alt="payment"> </a>
+        </div>
+    </div>
+    </section>
+
 </body>
+
 </html>
