--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Landing Page</title>
 
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="p404.css">
 
 </head>
 
@@ -22,6 +23,32 @@
         </div>
     </div>
     </section>
+
+    <!------- 404 Page Not Found ------->
+    <section id="p404">
+        <div class="containerP" id="notFound">
+            <div class="contentP">
+                <h2>404</h2>
+                <h4>Opps! Page Not Found</h4>
+                <p>The page you were looking for doesn't exist. You may have mistyped the address or the page may have moved.</p>
+                <a href="#">Back To Home</a> 
+            </div>
+        </div>
+    </section>
+
+
+
+    <!------- 404 Page Not Found ------->
+    <script type="text/javascript"> 
+        var container = document.getElementById('notFound');
+        window.onmousemove = function(e) {
+            var x = - e.clientX / 5,
+                y = - e.clientY / 5;
+            
+            container.style.backgroundPositionX = x + 'px';
+            container.style.backgroundPositionY = y + 'px';
+        }
+    </script>
 
 </body>
 
