--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
 
+     <!-- Bootstrap CSS -->
+     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="p404.css">
+    <link rel="stylesheet" href="landing-page.css">
+    <link rel="stylesheet" href="fb-react.css">
 
 </head>
 
@@ -37,6 +42,86 @@
     </section>
 
 
+    <!------- Landing Page ------->
+    <section id="landing-page">
+        <div class="container mt-5">
+            <header class="head my-3">
+                <nav class="navbar navbar-expand-lg navbar-light head__custom-nav">
+                    <a class="navbar-brand d-flex align-items-center" href="#">
+                        <img src="logo.png" alt="website logo">
+                        <span>Innovation Teach</span>
+                    </a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
+                        <span><img src="menu.png" alt=""></span>
+                    </button>
+                    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">About us</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Work</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Info</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-primary" href="#">Contact us</a>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
+            </header>
+        </div>
+        <div class="container">
+            <div class="row custom-section d-flex align-items-center">
+                <div class="col-12 col-lg-4">
+                    <h2>Team Work</h2>
+                    <h3>Process</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, quidem!</p>
+                    <a href="#">Learn more</a>
+                </div>
+                <div class="col-12 col-lg-8">
+                    <img src="mainbenner.png" alt="Team process banner">
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <!------- Facebook Emoji React ------->
+    <section id="fb-react">
+        <div class="rating">
+            <input type="radio" name="star" id="star1" checked="checked">
+            <label for="star1">
+                <img src="1.png">
+                <h4>Love It</h4>
+            </label>
+            <input type="radio" name="star" id="star2">
+            <label for="star2">
+                <img src="2.png">
+                <h4>Liked It</h4>
+            </label>
+            <input type="radio" name="star" id="star3">
+            <label for="star3">
+                <img src="3.png">
+                <h4>It's Ok</h4>
+            </label>
+            <input type="radio" name="star" id="star4">
+            <label for="star4">
+                <img src="4.png">
+                <h4>Dislike It</h4>
+            </label>
+            <input type="radio" name="star" id="star5">
+            <label for="star5">
+                <img src="5.png">
+                <h4>Hate It</h4>
+            </label>
+        </div>
+    </section>
 
     <!------- 404 Page Not Found ------->
     <script type="text/javascript"> 
@@ -48,6 +133,18 @@
             container.style.backgroundPositionX = x + 'px';
             container.style.backgroundPositionY = y + 'px';
         }
+    </script>
+
+     <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
     </script>
 
 </body>
